--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html,
 body {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
   font-family: sans-serif;
+}
+
+div#hello-world {
+  margin-top: 36px;
+  padding-bottom: 36px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 500px;
 }
